# mastodon_is_my_blog

./: .env.example  .gitignore  .gitlab-ci.yml  .pylintrc  .pylintrc_docs  .pylintrc_tests  .readthedocs.yaml  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SETUP.md  TASKS.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: build.yml  pages.yml  publish-package.yml  publish_to_pypi.yml  release.yml  tox.yml  zizmor.yml
alembic/: env.py
alembic/versions/: 001_add_identity_composite_indexes.py  002_add_in_reply_to_index.py  003_add_cached_account_post_stats.py  004_add_cached_link_previews.py  005_fix_cached_posts_primary_key.py  006_content_hub_groups.py  007_add_identity_config_name.py  008_add_has_job_to_cached_posts.py  009_add_outbound_interactions.py  010_add_root_id_to_cached_posts.py  011_add_thread_uncommon_words.py  012_add_api_call_log.py  013_add_friends_of_friends_cache.py  014_add_error_log.py  015_add_resumable_new_friends_scan.py  016_backfill_ensure_schema_columns.py
alembic_sync/: env.py
dataview/: .gitignore  Makefile  metadata.yaml
dataview/static/: dashboard.html
docs/: TODO.md  UNINSTALL.md  index.html  people_app.md
docs-src/: .eleventy.js  package-lock.json  package.json
docs-src/src/: author-months.njk  author-pages.njk  authors.njk  blogroll.njk  index.njk  posts.njk  profile.md  what-is-this.md
docs-src/src/_data/: blogroll.json  site.json  stormArchives.js  storms.json
docs-src/src/_includes/: css.njk  head.njk  js.njk
docs-src/src/_layouts/: base.njk  pages.njk
docs-src/src/assets/: site.css
docs/assets/js/: critical.js
docs/authors/: index.html
docs/authors/everybodhi/: index.html
docs/authors/matthewmartin/: index.html
docs/authors/mistersql/: index.html
docs/authors/runmattrun/: index.html
docs/blogroll/: index.html
docs/posts/2018-03-22-i-have-no-idea-what-i-m-doing-99728455571097903/: index.html
docs/posts/2022-10-29-cadence-lock-a-story-my-fitbit-running-data-has-been-a-lie-i-though-109251804749544519/: index.html
docs/posts/2022-11-05-photos-here-load-like-it-is-1998-on-a-56k-modem-if-the-fediverse-is-a-109292757896950981/: index.html
docs/posts/2022-11-15-made-you-look-109350186928806675/: index.html
docs/profile/: index.html
docs/what-is-this/: index.html
mastodon_is_my_blog/: AGENT.md  __about__.py  __main__.py  account_catchup_runner.py  account_config.py  admin_cli.py  auth_cli.py  blog_build.py  blog_publish.py  blogroll.py  bulk_sync_jobs.py  catchup.py  catchup_runner.py  cli.py  content_hub_classifier.py  content_hub_matching.py  content_hub_service.py  credentials.py  datetime_helpers.py  db_backend.py  db_init.py  db_log_handler.py  db_path.py  db_port.py  dev_database.py  dialect_upsert.py  domain_categories.py  duck.py  engagement_scoring.py  environment.py  identity_verifier.py  inspect_post.py  link_previews.py  main.py  maintenance.py  masto_client.py  masto_client_timed.py  models.py  notification_sync.py  perf.py  (+15 more)
mastodon_is_my_blog/blog_providers/: __init__.py  base.py  eleventy.py  fallback.py  pelican.py
mastodon_is_my_blog/data/: domain_categories.py  mastodon_instances.py
mastodon_is_my_blog/mastodon_apis/: api_log.py  follow_actions.py  masto_client.py  masto_client_timed.py
mastodon_is_my_blog/mastodon_examples/: account.json
mastodon_is_my_blog/routes/: accounts.py  admin.py  analytics.py  content_hub.py  forum.py  internal.py  new_friends.py  observability.py  peeps.py  posts.py  publish.py  writing.py
mastodon_is_my_blog/scripts/: backfill_root_id.py  install_spacy_model.py
mastodon_is_my_blog/utils/: perf.py  settings_loader.py
rtd/: index.md
rtd/getting-started/: core-concepts.md  quickstart.md
rtd/installation/: clone-and-run.md  pipx.md  uv.md
rtd/overview/: what-is-mimb.md  who-is-this-for.md
rtd/reference/: component-provenance.md  ensuring_mimb_stays_fast.md  roadmap.md  security.md  troubleshooting.md
rtd/using-mimb/: admin.md  content.md  forum.md  people.md  queries-and-filters.md  write.md
script/: build
scripts/: build.sh  kill_uvicorn_8000.sh  make_source_all.sh  make_source_backend.sh  make_source_backend_complete.sh  make_source_ui.sh  news_domains.py  undo_release.sh
spec_vision/: Gemeniisms.md  account_types.md
sprint/: epic_lite_sprint01.md  epic_quality_sprint01.md  epid_lite_sprint02.md  epid_lite_sprint03.md  sprint01.md  sprint02.md  sprint03.md  sprint04.md  sprint05.md
test/: conftest.py  test_api_readonly_endpoints.py  test_auth_cli.py  test_backfill_root_id.py  test_blog_build.py  test_blog_providers.py  test_blog_roll.py  test_catchup.py  test_catchup_runner.py  test_cli.py  test_connect_mock_identity.py  test_content_hub_classifier.py  test_content_hub_matching.py  test_content_hub_routes.py  test_content_hub_service.py  test_datetime_helpers.py  test_day_zero.py  test_db_backend.py  test_db_init.py  test_db_port.py  test_dev_database.py  test_duck.py  test_engagement_scoring.py  test_follow_actions.py  test_forum_endpoint.py  test_identity_limits.py  test_identity_verifier.py  test_inspect_post.py  test_internal_routes.py  test_link_previews.py  test_new_friends_filters.py  test_notification_sync.py  test_oauth_connect.py  test_peeps_routes.py  test_posts_query_filters.py  test_queries_helpers.py  test_queries_sync.py  test_real_db_readonly.py  test_secret_columns.py  test_settings_loader.py  (+10 more)
test_integration/: README.md  conftest.py  test_catchup_against_mock.py  test_mock_smoke.py
test_perf/: conftest.py  seed_perf_db.py  test_perf_duckdb.py  test_perf_mock_smoke.py  test_perf_sqlalchemy.py
web/: AGENT.md  AGENTS.md  Makefile  README.md  angular.json  edit_files.py  inspect_post_fixed.py  masto_client_timed_fixed.py  package-lock.json  package.json  tsconfig.app.json  tsconfig.lite.json  tsconfig.spec.json  vitest.config.ts
web/dead_code/: home.component.html  post.component.html  post.component.ts
web/example_data/: post.json  storms.json  video_posts.json
web/src/: index.html  index.lite.html  main.lite.ts  main.ts  styles.scss  theme.scss
(+866 files in other folders)
