[project]
name = "mastodon_is_my_blog"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "mastodon-py>=2.1.4",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "python-dotenv>=1.0",
  "beautifulsoup4>=4.12",
  "alembic>=1.18.0",
  "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff",
    "black",
    "isort"
]

#[project.scripts]
#mimb = "mastodon_is_my_blog.cli:main"

[tool.isort]
profile = "black"
