[project]
name = "mastodon-is-my-blog"
version = "0.4.0"
description = "A personal Mastodon reader and blog management tool"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["mastodon", "fediverse", "blog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # "Programming Language :: Python :: 3.14",
]
dependencies = [
    # web backend
    "fastapi[standard-no-fastapi-cloud-cli]>=0.115",
    "uvicorn[standard]>=0.34",
    # database
    "alembic>=1.18.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    # 3rd party apis
    "mastodon-py>=2.2.1",
    "pip-system-certs>=5.3",
    # Web cards
    "beautifulsoup4>=4.12",
    "httpx>=0.28.1",
    # secure config
    "platformdirs>=4.0",
    "keyring>=25.0",
    "python-dotenv>=1.0",
    # analytics
    "duckdb>=1.1",
    # forum topic extraction
    "wordfreq>=3.0",
    "spacy>=3.7; python_version <= '3.13'",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
datasette = [
    "datasette>=0.65.2",
    "datasette-vega>=0.6.2",
]

[project.scripts]
mastodon_is_my_blog = "mastodon_is_my_blog.cli:main"
mimb = "mastodon_is_my_blog.cli:main"

[project.urls]
Homepage = "https://github.com/matthewmartin/mastodon_is_my_blog"
Documentation  = "https://mastodon-is-my-blog.readthedocs.io/en/latest/"
Repository = "https://github.com/matthewmartin/mastodon_is_my_blog"
Issues = "https://github.com/matthewmartin/mastodon_is_my_blog/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = [
    "mastodon_is_my_blog/static/browser/**",
]

[tool.hatch.build.targets.wheel]
packages = ["mastodon_is_my_blog"]

[tool.hatch.build.targets.sdist]
include = [
    "mastodon_is_my_blog/**",
    "alembic/**",
    "alembic.ini",
    "README.md",
    "scripts/build.sh",
    "web/**",
]

[dependency-groups]
dev = [
    "black",
    "isort",
    "types-requests",
    "git2md; python_version >= '3.10'",
    "pyclean; python_version >= '3.12'",
    "strip-docs>=1.0; python_version >= '3.12'",
    "gha-update; python_version >= '3.12'",
    "mkdocstrings[python]",
    "mkdocs; python_version >= '3.12'",
    "mdformat",
    # plugin finder
    "packaging; python_version >= '3.8'",
    # mpy
    "mypy; python_version >= '3.8'",
    "types-toml; python_version >= '3.8'",
    # reports
    # build
    "vermin; python_version >= '3.8'",
    "metametameta>=0.1.3; python_version >= '3.9'",
    "hatchling; python_version >= '3.8'",
    "ruff>=0.12.0; python_version >= '3.8'",
    "pylint; python_version >= '3.8'",
    "bandit; python_version >= '3.8'",
    "pip-audit; python_version >= '3.8'",
    "pre-commit; python_version >= '3.8'",
    # testing tools
    "pytest_asyncio",
    "pytest; python_version >= '3.8'",
    "pytest-cov; python_version >= '3.8'",
    "pytest-xdist>=3.5.0; python_version >= '3.8'",
    "pytest-randomly>=3.15.0; python_version >= '3.8'",
    "pytest-sugar>=0.9.7; python_version >= '3.8'",
    "pytest-mock; python_version >= '3.8'",
    "pytest-unused-fixtures; python_version >= '3.10'",
    "hypothesis[cli]; python_version >= '3.8'",
    "detect-test-pollution",
    "pytest-timeout>=2.4.0",
    # docs
    "interrogate>=1.5.0; python_version >= '3.8'",
    "pydoctest==0.2.1; python_version >= '3.8'",
    "pdoc3>=0.5.0; python_version >= '3.8'",
    "mdformat>=0.5.0; python_version >= '3.8'",
    "linkcheckmd>=1.4.0; python_version >= '3.8'",
    "codespell>=2.2.6; python_version >= '3.8'",
    "pyenchant>=3.2.2; python_version >= '3.8'",
    "build>=1.4.3",
]


[tool.isort]
profile = "black"

[tool.ruff]
line-length = 320
# Assume Python 3.10.
target-version = "py39"

# Enable Pyflakes `E` and `F` codes by default.
[tool.ruff.lint]
select = ["E", "F",
    # "D", # docs
    "UP", # pyupgrade
    "B", # bugbear
]
ignore = [
    "B008",
    "E402",
    "D402",
    "D301", # messes with doctests
    "E722",
    # only track structural problems with docstrings, not whitespace, nor missing
    "D200", "D212", "D415", "D411", "D205", "D102", "D103", "D100", "D107", "D101", "D104", "D105",
    "UP007",
]
per-file-ignores = { }

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Exclude a variety of commonly ignored directories.
exclude = [
    "dead_code",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
